Maven javadoc configuration fixed. module-info.java with some merge garbage