@@ -104,7 +104,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
-						<version>3.4.0</version>
+						<version>3.4.1</version>
 						<executions>
 							<execution>
 								<id>attach-javadocs</id>
@@ -114,8 +114,10 @@
 							</execution>
 						</executions>
 						<configuration>
+							<release>19</release>
 							<additionalOptions>
 								<additionalOption>-Xdoclint:none</additionalOption>
+								<additionalOption>--enable-preview</additionalOption>
 							</additionalOptions>
 						</configuration>
 					</plugin>
@@ -160,6 +162,17 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.4.1</version>
+				<configuration>
+					<release>19</release>
+					<additionalOptions>
+						<additionalOption>--enable-preview</additionalOption>
+					</additionalOptions>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
